# haskell-meetup-k-means

./: k-means.cabal
src/: Main.hs
