name:                k-means
version:             0.1.0.0
synopsis:            Basic implementation of the k-Means clustering algorithm
description:         Please see README.md
homepage:            https://github.com/daniel-pape/k-means#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Pape
maintainer:          daniel.pape@codecentric.de
copyright:           2016 Daniel Pape
category:            Data Science
build-type:          Simple
cabal-version:       >=1.10

executable k-means
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers
